fix: Button z-indexes

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -783,6 +783,7 @@ body.zen-item-actions-hidden .zen-better-tooltip table.zen-added {
   right: 16px;
   cursor: pointer;
   transition: bottom 0.2s ease-in-out;
+  z-index: 900;
 
   &:hover {
     bottom: 0;
@@ -1168,6 +1169,7 @@ body.zen-item-actions-hidden .zen-better-tooltip table.zen-added {
   bottom: 0;
   right: 40px;
   cursor: pointer;
+  z-index: 900;
 }
 
 .zen-priority {
